# internal/entity/translation.go
@@ -2,10 +2,10 @@
 // HTTP response objects if suitable. Each logic group entities in own file.
 package entity
 
-// Translation -.
-type Translation struct {
+// GophKeeper -.
+type GophKeeper struct {
 	Source      string `json:"source"       example:"auto"`
 	Destination string `json:"destination"  example:"en"`
 	Original    string `json:"original"     example:"текст для перевода"`
-	Translation string `json:"translation"  example:"text for translation"`
+	GophKeeper  string `json:"GophKeeper"  example:"text for GophKeeper"`
 }
